2008-07-21  Sam Steingold  <sds@gnu.org>

	* pathname.d (check_file_reopen): when *REOPEN-OPEN-FILE* is WARN,
	issue a warning instead of signaling an error
	* constsym.d (check_file_reopen): declare
	* spvw.d (init_symbol_values): init *REOPEN-OPEN-FILE* to ERROR
	* utils/clispload.lsp (*reopen-open-file*): set to WARN to pacify
	6 tests

2008-07-21  Sam Steingold  <sds@gnu.org>

	* utils/clispload.lsp (*pprint-first-newline*): set to NIL to
	conform to Paul's expectations

2008-07-21  Sam Steingold  <sds@gnu.org>

	* encoding.d: do not #include <stdio.h>, it is already done by lispbibl

2008-07-20  Sam Steingold  <sds@gnu.org>

	* pprint.lisp (copy-pprint-dispatch): as per ANSI, when no table
	is specified, return a COPY of *PRINT-PPRINT-DISPATCH*, not its value

2008-07-20  Sam Steingold  <sds@gnu.org>

	* io.d (justify_empty_2): concatenate all strings in a single-liner
	into one string instead of pushing all the components into the block

2008-07-18  Sam Steingold  <sds@gnu.org>

	* io.d (paren_open): a minor simplification
	(print): remove an unused static function
	(justify_empty_2): never drop any strm_pphelp_strings (this fixes
	the "risky" test in iofkts.tst)

2008-07-17  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp (*canonicalize-encoding*):
	defvar and export from XLIB
	* modules/clx/new-clx/clx.f (get_font_info_and_display): use it
	together with EXT:CANONICALIZE instead of the C ad-hoc-ery

2008-07-17  Sam Steingold  <sds@gnu.org>

	* dfloat.d (RA_to_DF): clean up the STACK before error_overflow()
	* ffloat.d (RA_to_FF): ditto
	* sfloat.d (RA_to_SF): ditto
	These bugs are probably ~20 years old.

2008-07-17  Sam Steingold  <sds@gnu.org>

	* macros3.lisp (canonicalize): new function

2008-07-17  Sam Steingold  <sds@gnu.org>

	* pathname.d (assure_dir_exists) [PATHNAME_UNIX]: fix a GC-safety
	bug introduced on 2008-07-11 (get_path_info is GC-unsafe)
	(classify_namestring): GC-safe

2008-07-17  Sam Steingold  <sds@gnu.org>
